--- a/fiori_report_278/webapp/view/DataBinding.view.xml
+++ b/fiori_report_278/webapp/view/DataBinding.view.xml
@@ -4,16 +4,16 @@
 			<Panel xmlns="sap.m" width="auto" expandable="true" expanded="true" id="panel0">
 				<headerToolbar>
 					<Toolbar id="toolbar1">
-						<Title text="Header" id="headerTitle"/>
+						<Title text="Model via serviço OData" id="headerTitle"/>
 						<ToolbarSpacer id="_IDGenToolbarSpacer1"/>
 						<Button id="_IDGenButton1" icon="sap-icon://settings"/>
 					</Toolbar>
 				</headerToolbar>
 
 				<content>
-					<List noDataText="Drop list items here" id="list0" items="{/Products}">
+					<List noDataText="Sem produtos disponíveis" id="list0" items="{/Products}">
 					<items>
-					    <StandardListItem type="Navigation" title="List Item" description="Description text" icon="sap-icon://picture" id="item0"/>
+					    <StandardListItem type="Navigation" title="{ProductId}" description="{Name}" icon="sap-icon://picture" id="item0"/>
 					</items>
 					</List>
 				</content>
