--- a/fiori_report_278/webapp/view/DataBinding.view.xml
+++ b/fiori_report_278/webapp/view/DataBinding.view.xml
@@ -1,5 +1,5 @@
 <mvc:View xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" xmlns:fb="sap.ui.comp.filterbar" controllerName="br.com.cliente.gestao.fiorireport278.controller.DataBinding" displayBlock="true">
-	<Page id="page" title="{i18n>title}">
+	<Page id="DataBinding" title="{i18n>title}">
 		<content>
 			<Panel xmlns="sap.m" width="auto" expandable="true" expanded="true" id="panel0">
 				<headerToolbar>
