Add Json model files and displaying the data

--- a/fiori_report_278/webapp/view/DataBinding.view.xml
+++ b/fiori_report_278/webapp/view/DataBinding.view.xml
@@ -16,6 +16,23 @@
 					    <StandardListItem type="Navigation" title="{ProductId}" description="{Name}" icon="sap-icon://picture" id="item0"/>
 					</items>
 					</List>
+					<Panel xmlns="sap.m" width="auto" expandable="true" expanded="true" id="panelJSONModel">
+					    <headerToolbar>
+					        <Toolbar id="toolbar1_1680716664126">
+					            <Title text="Header" id="headerTitle2"/>
+					            <ToolbarSpacer id="_IDGenToolbarSpacer2"/>
+					            <Button icon="sap-icon://settings" id="_IDGenButton2"/>
+					            </Toolbar>
+					        
+					    </headerToolbar>
+					    <content>
+					        <List noDataText="Drop list items here" id="list0_1680717406738" items="{Model_JSON_Produtos>/Products}">
+					            <items>
+					                <StandardListItem type="Navigation" title="{Model_JSON_Produtos>ProductName}" description="{Model_JSON_Produtos>Title}" icon="sap-icon://picture" id="item0_1680717406738"/>
+					            </items>
+					        </List>
+					    </content>
+					    </Panel>
 				</content>
 
 				<infoToolbar>
