Databind one element in a specific control

--- a/fiori_report_278/webapp/view/DataBinding.view.xml
+++ b/fiori_report_278/webapp/view/DataBinding.view.xml
@@ -1,5 +1,6 @@
 <mvc:View xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" xmlns:fb="sap.ui.comp.filterbar"
-  controllerName="br.com.cliente.gestao.fiorireport278.controller.DataBinding" displayBlock="true">
+  controllerName="br.com.cliente.gestao.fiorireport278.controller.DataBinding" displayBlock="true"
+  id="btnBindingElement">
   <Page id="DataBinding" title="{i18n>title}">
     <content>
       <Panel xmlns="sap.m" width="auto" expandable="true" expanded="true" id="panel0">
@@ -32,6 +33,30 @@
                     description="{Model_JSON_Produtos>Title}" icon="sap-icon://picture" id="item0_1680717406738" />
                 </items>
               </List>
+            </content>
+          </Panel>
+          <Panel xmlns="sap.m" width="auto" expandable="true" expanded="true" id="panel0_1680720251589">
+            <headerToolbar>
+              <Toolbar id="toolbar1_1680720251588">
+                <Title text="Header" id="txtPanel3" />
+                <ToolbarSpacer id="tb3" />
+                <Button icon="sap-icon://settings" id="btn3" />
+              </Toolbar>
+            </headerToolbar>
+            <content>
+              <sap.ui.layout.form:SimpleForm xmlns:sap.ui.layout.form="sap.ui.layout.form"
+                xmlns:sap.ui.core="sap.ui.core" editable="true" layout="ResponsiveGridLayout" id="formRegions">
+                <sap.ui.layout.form:content>
+                  <sap.ui.core:Title text="Binding element" id="title1" />
+                  <Label text="Nome da região" id="label0" />
+                  <Input width="100%" id="input0" value="{Model_JSON_Regions>name}"/>
+                  <Label text="Cidade / País" id="label1" />
+                  <Input width="100%" id="input2" value="{Model_JSON_Regions>companies/1/city} - {Model_JSON_Regions>companies/1/country}"/>
+                  <Label text="Acessar regiões" width="100%" id="label2" />
+                  <Button xmlns="sap.m" press="getRegion" text="Binding Element Regions" id="btnBinding"
+                    icon="sap-icon://add" />
+                </sap.ui.layout.form:content>
+              </sap.ui.layout.form:SimpleForm>
             </content>
           </Panel>
         </content>
